(Fixed): allow wildcard in allowedHeaders to resolve Angular preflight